[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/game.gd" type="Script" id=1]
[ext_resource path="res://scenes/minion_spawner.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/enemy_spawner.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/sprites/forge_circle.png" type="Texture" id=4]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Forge" type="Control" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -128.0
margin_right = 128.0
margin_bottom = 256.0

[node name="ForgeCircle" type="TextureRect" parent="CanvasLayer/Forge"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 4 )

[node name="CurrentRuneRichTextLabel" type="RichTextLabel" parent="CanvasLayer/Forge"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -7.5
margin_right = 50.0
margin_bottom = 7.5
bbcode_enabled = true
bbcode_text = "[center]lorem[/center]"
text = "lorem"
fit_content_height = true

[node name="EnemySpawner" parent="." instance=ExtResource( 3 )]
position = Vector2( 1350, 325 )

[node name="MinionSpawner" parent="." instance=ExtResource( 2 )]
position = Vector2( -74, 324 )
